--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 django>=1.5.1
 wheel==0.24.0
 # Additional requirements go here
+Mezzanine>=3.1.0
+git+https://github.com/vtemian/buffpy
+requests==2.7.0
